# s3k-barocq

./: .gitignore  LICENSE  README.md  hello-world  setup  setup.sh
cross/: ccomp-rv64imac.ini  gcc-rv64imac.ini
examples/hello/: meson.build  s3k_conf.h
examples/hello/subprojects/app0/: main.c  meson.build  meson.options
examples/hello/subprojects/app0/plat/: qemu_virt.c  qemu_virt.h
examples/hello/subprojects/app1/: main.c  meson.build
examples/hello/subprojects/app1/plat/: qemu_virt.ld
examples/pingpong/: meson.build
examples/pingpong/subprojects/app0/: main.c
examples/pingpong/subprojects/app1/: main.c
kernel/: meson.build  meson.options  s3k_conf.h
kernel/brc/: a.c  aliasing.txt  cap.brc  cap_ops.br  cap_ops.brc  channels.br  config.br  ctable.br  ctable.brc  error.br  error.brc  exception.br  interrupt.br  ipc.br  ipc.brc  kernel.br  kernel.brc  kernel.c  kernel.h  machine.br  machine.brc  meson.build  message.br  modorder  monitor.br  monitor.brc  pmp.br  pmp.brc  proc.br  ptable.br  sched.br  syscall.br  syscall.brc  trap.brc  types.br  types.brc  util.br  vreg.br
kernel/brc/_old/: kernel.c  kernel_new.br  kernel_old.br
kernel/brc/capgen/: cap.br  cap.yml  capgen.py
kernel/include/: barocq.h  cap_ops.h  csr.h  kassert.h  kprint.h  ks_init.h  kstate.h  machine.h  pmp.h  preempt.h  proc.h  rtc.h  sched.h  syscall.h  trap.h  types.h
kernel/include/cap/: ipc.h  monitor.h  ops.h  pmp.h  table.h  util.h
kernel/include/uart/: ns16550a.h  sifive.h  ti16750.h
kernel/plat/cheshire/: config.h  linker.ld  plat.c
kernel/plat/qemu_virt/: config.h  linker.ld  plat.c
kernel/src/: cap_ops.c  csr.c  exception.c  head.S  interrupt.c  kernel.c  kinit.c  kprint.c  ks_init.c  kstate.c  machine.c  proc.c  rtc.c  sched.c  syscall.c  trap.S  trap.c
kernel/src/cap/: ipc.c  monitor.c  ops.c  pmp.c  table.c  util.c
kernel/test/: config.h  main.c  meson.build  utils.c
lib/: meson.build
lib/include/: s3k.h
lib/include/s3k/: syscall.h  util.h
lib/src/: syscall.c
projects/exercise/app0/: diskio.c  diskio.h  ff.c  ffconf.h  main.c  virtio_disk.c  virtio_disk.h
projects/exercise/app1/: main.c
projects/exercise/app2/: main.c
projects/hello/: Makefile  meson.build  meson.options
projects/hello/subprojects/: libserio.wrap
projects/hello/subprojects/app0/: head.S  main.c  meson.build
projects/hello/subprojects/app0/plat/: qemu_virt.h  qemu_virt.ld
projects/tutorial-commons/: utils.h
projects/tutorial.01.hello-world/app0/: main.c
projects/tutorial.02.trap-handler/app0/: main.c
projects/tutorial.03.mem-cap/app0/: main.c
projects/tutorial.04.timing-cap/app0/: main.c
projects/tutorial.04.timing-cap/app1/: main.c
projects/tutorial.05.rpc/app0/: main.c
projects/tutorial.06.rpc-resume/app0/: main.c
projects/tutorial.06.rpc-resume/app1/: main.c
projects/tutorial.07.msg-noyield/app0/: main.c
projects/tutorial.07.msg-noyield/app1/: main.c
projects/tutorial.08.rpc-mem-cap/app0/: main.c
projects/tutorial.08.rpc-mem-cap/app1/: main.c
projects/tutorial.09.fs/app0/: buf.h  ff.h  ffsystem.c  main.c  virtio.h
